Oct 17 2005  devel  Fixed packetsourcetracker not being updated for meta msgclient
                    Removed packetsource_bsd stub class
                    Moved packetsource_bsd to packetsource_bsdrt
                    Fixed up IPC framework to a working state
                    Ported packetsource root controller to IPC framework
Oct 16 2005  devel  Added tracker meta to packsources for chain components
                     to access
                    Added "monitor_mode" ioctl set attempt to generic
                     monitor
                    Fixed gpscore/gpsdclient double pollable registration
                    Fixed gpsdclient parsing more
                    Added void* aux pointer to message clients for incoming
                     IPC_remote generic and other message clients linked to
                     replication of messages (netframe)
                    Added IPC generic framework (incomplete)
                    Took drone/client/etc out of Makefile for now
Oct 13 2005  devel  Converted BSD interface control framework from stable
                    Removed radiotap availability check, since we force it on
                     with local headers now anyhow
                    Fixed local radiotap inclusion
                    Fleshed out BSD capture sources
                    Added CRYPTODROP alert for networks dropping advertised
                     encryption
                    Changed network/client crypto tracking to take the last
                     advertised crypto set instead of the aggregate of all
                     crypto ever seen
                    Added per-sec throttling to kismet.conf defaults
Oct 12 2005  devel  Tweaked configure for BSD radiotap detection
                    Removed some OS specific stuff from generic pcapsource
                    Removed -O2 from default makefile cxxflags (oops)
Oct 10 2005  devel  Removed wext22 check from configure (unneeded)