@@ -1,3 +1,5 @@
+Oct 18 2005  devel  Fixed invalid handling of map when cleaning up kisclient
+                     protocols during a disconnect
 Oct 17 2005  devel  Fixed packetsourcetracker not being updated for meta msgclient
                     Removed packetsource_bsd stub class
                     Moved packetsource_bsd to packetsource_bsdrt
